# CloudFlare-Nextjs-LLM-starter-2026

./: .env.example  .gitignore  CLAUDE.md  PRD-V-1.0.md  README.md  biome.json  commitlint.config.js  docker-compose.yml  drizzle.config.ts  lefthook.yml  local.db.backup  main.py  middleware.ts  next.config.ts  open-next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  pyproject.toml  setup.sh  tsconfig.json  vitest.config.ts  vitest.setup.ts  wrangler.jsonc
.claude/: plan-stats.json  settings.json
.claude/session-summaries/: 20251225-boilerplate-verification-fixes.md  20251225-cloudflare-deployment-guide.md  20251225-cloudflare-deployment.md  20251225-google-oauth-logout.md  20251225-http500-edge-runtime-fix.md  20251225-rbac-chat-protection-planning.md
__tests__/lib/: llm.test.ts  logger.test.ts
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
artifacts/docs/: AUTH-FILES-REFERENCE.md  Auth-1-0.md  Boilerplate-usage.md  DEPLOYMENT_SUCCESS.md  Deploy.md  temp-deploy-dump.md
components/auth/: sign-out-button.tsx
drizzle/: migrate-local.ts  seed.ts
drizzle/migrations/: 0000_military_mulholland_black.sql
drizzle/schema/: counters.ts  index.ts  usage-logs.ts  users.ts
e2e/: auth.spec.ts  chat.spec.ts  counter.spec.ts  dashboard.spec.ts  home.spec.ts
lib/: cloudflare.ts  cost-tracker.ts  db-types.ts  db.ts  logger.ts
lib/auth/: config.ts  index.ts
python-services/example-service/: Dockerfile  README.md  pyproject.toml
python-services/example-service/src/: __init__.py  main.py
scripts/: debug-db.ts
(+26 files in other folders)
